# zonnecel

./: README.md  pyproject.toml
src/: model.py
src/zonnecel/: MEcontroller.py  MEmodel.py  applicatie_sven.py  controller.py  controller_sven.py  mainwindow.ui  mainwindow_sven.py  model.py  model_sven.py  zonUI.py  zonnecel_code.py
