[tool.poetry]
name = "zonnecel"
version = "0.1.0"
description = ""
authors = ["svenbenv <149401999+svenbenv@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "zonnecel", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zon = "zonnecel.zonnecel_code:run"
