[tool.poetry]
name = "zonnecel"
version = "0.1.0"
description = ""
authors = ["svenbenv <149401999+svenbenv@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "zonnecel", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.2"
pyside6 = "^6.6.1"
pyqtgraph = "^0.13.3"
pyvisa = "^1.14.1"
nsp2visasim = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zon = "zonnecel.zonnecel_code:run"
