[tool.poetry]
name = "zonnecel"
version = "0.1.0"
description = ""
authors = ["svenbenv <149401999+svenbenv@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "zonnecel", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.2"
pyside6 = "^6.6.1"
pyqtgraph = "^0.13.3"
pyvisa = "^1.14.1"
nsp2visasim = "^1.3.1"
pyvisa-py = "^0.7.1"


[tool.poetry.group.dev.dependencies]
nsp2visasim = "^1.3.1"
poethepoet = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zonnecel = "zonnecel.applicatie_sven:main"


[tool.poe.tasks.compile]
shell = """
pyside6-uic src/zonnecel/mainwindow.ui -o src/zonnecel/mainwindow_sven.py
"""
interpreter = ["posix", "powershell"]